# gitcoin11-fluence

./: Readme.md  package.json
air-scripts/: interval.start.air  interval.stop.air  ipfs-api.get_and_cache.air  ipfs-api.get_external_api_multiaddr.air  ipfs-api.get_external_swarm_multiaddr.air  ipfs-api.get_from.air  ipfs-api.get_local_api_multiaddr.air  ipfs-api.put.air  ipfs-api.set_timeout.air  node_selector.random.air  private.clone_string.air  private.deploy_identity.air  private.deploy_signer.air  private.interval.air  private.test.air  process.add_blueprint.air  process.add_blueprint_with_storage.air  process.add_curl.air  process.add_curl_adapter.air  process.add_local_storage.air  process.add_module.air  process.deploy_service.air  process.deploy_service_with_storage.air  process.put_file_size.air  process.remove_service.air  public-record.deploy.air  public-record.do_smthng.air  public-record.fetch_and_store.air  public-record.get_filter.air  public-record.handle_error.air  public-record.poll.air  public-record.run.air  public-record.update_filter.air  rebirth.activate.air  rebirth.init.air
aqua-scripts/: builtin.aqua  interval.aqua  ipfs-api.aqua  node_selector.aqua  private.aqua  process.aqua  process_files.aqua  public-record.aqua  rebirth.aqua
code-importer/: build.sh
code-importer/configs/: facade_cfg.json
code-importer/facade/: query.graphql
code-importer/facade/src/: ipfs.rs  main.rs
ens-service/: Readme.md  build.sh
ens-service/artifacts/: curl_adapter.wasm  ens_facade.wasm  facade.wasm
ens-service/configs/: Config.toml  facade_cfg.json
ens-service/facade/: Cargo.toml
ens-service/facade/src/: curl.rs  ens_calls.rs  ens_namehash.rs  eth_utils.rs  fce_results.rs  jsonrpc_helpers.rs  main.rs  resolver_contract.rs
env-db/: build.sh
env-db/artifacts/: curl_adapter.wasm  facade.wasm
env-db/facade/: Cargo.toml
env-db/facade/src/: auth.rs  crud.rs  main.rs
event-service/: Readme.md  build.sh
event-service/artifacts/: Comrap_website_ver20211011094151 - VN.csv  curl_adapter.wasm  facade.wasm
event-service/configs/: facade_cfg.json
event-service/facade/src/: eth_calls.rs  jsonrpc_helpers.rs  main.rs
file-reader/: build.sh
file-reader/artifacts/: curl_adapter.wasm  facade.wasm
file-reader/configs/: facade_cfg.json
file-reader/facade/: Cargo.toml
file-reader/facade/src/: file_reader.rs  main.rs
graphql-service/: build.sh
graphql-service/artifacts/: curl_adapter.wasm  facade.wasm
graphql-service/configs/: facade_cfg.json
graphql-service/facade/: Cargo.toml  schema.graphql
graphql-service/facade/src/: main.rs  the_graph_calls.rs
identity-service/: build.sh
identity-service/artifacts/: curl_adapter.wasm  facade.wasm
identity-service/configs/: Config.toml  local_storage_cfg.json
identity-service/facade/: Cargo.toml
identity-service/facade/src/: eth_calls.rs  main.rs
ipld-data-service/: build.sh
ipld-data-service/artifacts/: curl_adapter.wasm  facade.wasm
ipld-data-service/configs/: facade_cfg.json
ipld-data-service/facade/: resolver.json
ipld-data-service/facade/src/: ipld_tree.rs  main.rs
signer-service/: build.sh
signer-service/artifacts/: signer_facade.wasm
signer-service/configs/: Config.toml  facade_cfg.json
signer-service/facade/: Cargo.toml
signer-service/facade/src/: auth.rs  keccak.rs  keys.rs  main.rs  memory.rs  transactions.rs
