[package]
name = "facade"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "facade"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "=0.6.11", features = ["logger"] }

