[package]
name = "facade"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "facade"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
marine-rs-sdk = { version = "=0.6.11", features = ["logger"] }
log = "0.4.8"
chrono = "0.4.19"
ethereum-types = "0.11.0"
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
marine-sqlite-connector = "0.5.1"
bytes = "1.1.0"
hex-literal = "0.3.3"
ethers-core = { git = "https://github.com/Joera/ethers-core-0.1.3" }
rlp = "0.5.1"
rlp-derive = "0.1.0"
ethabi = "14.1.0"
ethabi-contract = "11.0.0"
ethabi-derive = "14.1.0"
graphql_client = "0.10.0"
indexmap = "1.7.0"
cid = "0.7.0"